<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GiftHunter</string>
    <!--Login screen-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Login to the app</string>
    <string name="email_hint"> Enter your email address</string>
    <string name="pwd_hint"> Enter your password</string>
    <string name="techincalerror">Techinical error. Please try again later</string>
    <string name="confirmpwdmsg">Password is not matching</string>
    <string name="manditory">All fields are manditory</string>
    <string name="netwrkerror">Network is not available. Please check your internet connection.</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="quiz">Quiz</string>
    <string name="confirmpwd">Confirm Password</string>
    <string name="signout">Sign Out</string>

    <!--Signup-->
    <string name="signup">Sign Up</string>
    <string name="signupmsg">Register to the app using your emailid</string>
    <string name="display_name">Enter display name</string>
    <string name="age">Enter your age</string>
    <string name="section">Enter class</string>
    <string name="about">Enter about you</string>
    <string name="totalscore">Total Score: </string>
    <string name="display_name_text">Welcome, </string>
    <string name="age_text">Age: </string>
    <string name="grade">Grade: </string>
    <string name="about_me">About Me: </string>
    <string name="totalgames">Total Games: </string>
    <string name="submit">Submit</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="something_wrong">Something went wrong. Please try again</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_quiz_fragment">Hello Quiz fragment</string>
    <string name="hello_settings_fragment">Hello settings fragment</string>
    <string name="title_activity_dahboard">DahboardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="opt">Options</string>
    <string name="count">x/n</string>
    <string name="score">Score </string>
    <string name="levelcompleted">Level Completed</string>
    <string name="currentlevelcompleted">This levele is completed, Do you want to start new level now? </string>
    <string name="yes">YES</string>
    <string name="later">May be later</string>
    <string name="name">Name</string>
    <string name="welcomeapp">Welcome </string>
    <string name="app_version">app v0.0.1</string>
    <string name="no_active_quiz"> No active game with this PIN</string>
    <string name="invalid_pin_toast">Enter a valid pin</string>
    <string name="pin_dialog_title">Enter PIN to join Quiz</string>
    <string name="enter_pin">Enter pin</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="quiz_done">Quiz is completed</string>
    <string name="time_up">Time-up, moving to next question Previous answer was </string>
    <string name="correct_answer">Congrats! Correct answer</string>
    <string name="wrong_answer">Sorry, Correct answer was </string>
    <string name="view_results">View Results</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="previous_quesion_result">Result of previous question</string>
    <string name="initial_value_for_countdown">00</string>
    <string name="general_error">Something went wrong. Please try again!</string>
    <string name="you">(You)</string>
    <string name="point">point</string>
    <string name="thumbnail">thumbnail</string>
    <string name="avatar">avatar</string>

</resources>
