<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/prizeIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/thumbnail"
        android:scaleType="centerInside" />

    <RelativeLayout
        android:id="@+id/score_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/prizeIcon">

        <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/display_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/playerPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playerName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/point"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>